--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:aDi+X8IShtfA5cOFmYZU2khL9MyK+BSmAcD3o0IfSuU=
 APP_DEBUG=true
-APP_URL=http://localhost/examen/
+APP_URL=http://localhost/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
